Tests/RunCMake/NinjaMultiConfig/SimpleNoCross-relwithdebinfo-in-release-graph-target-ninja-stderr.txt
^ninja: error: 'RelWithDebInfo/[^
]*simplestatic[^
]*', needed by 'simplestatic:RelWithDebInfo', missing and no known rule to make it$
